gateways/envoy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-api
  namespace: envoy
spec:
  parentRefs:
    - name: envoy-gateway

  hostnames:
    - envoy.wso2.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo

      backendRefs:
        - name: echo
          port: 80
